new arabic words

--- a/index.html
+++ b/index.html
@@ -1433,11 +1433,11 @@
   {"tense1": "honorer", "tense2": "بَرَّ / يَبَرُّ / بِرّ / بَرَّ / يُبَرُّ / بُرَّ", "type": "verb"},
   {"tense1": "obéir", "tense2": "أَطَاعَ / يُطِيعُ / طَاعَة / أَطِعْ / يُطَاعُ / أُطِيعَ", "type": "verb"},
   {"tense1": "traitement", "tense2": "مُعَامَلَة / مُعَامَلَات / مُعَامَلَتَان / مُعَامَلَاتٍ / مُعَامَلَتَيْن", "type": "word"},
-  {"tense1": "tropical", "tense2": "اِسْتِوَائِيّ / اِسْتِوَائِيُّون / اِسْتِوَائِيَّان / اِسْتِوَائِيِّين / اِسْتِوَائِيَّيْن", "type": "word"},
+  {"tense1": "tropical", "tense2": "اِسْتِوَائِيّ / اِسْتِوَائِيُّون / اِسْتِوَائِيَّان / اِسْتِوَائِيِّين / اِسْتِوَائِيَّيْن", "type": "word"}, 
   {"tense1": "cactus", "tense2": "صَبَّار / صَبَّارَات / صَبَّارَان / صَبَّارَاتٍ / صَبَّارَيْن", "type": "word"},
   {"tense1": "poussière", "tense2": "غُبَار / أَغْبِرَة / أَغْبِرَةً", "type": "word"},
   {"tense1": "portada", "tense2": "غِلَاف / أَغْلِفَة / غِلَافَان / أَغْلِفَةً / غِلَافَيْن", "type": "word"},
-  {"tense1": "se dérouler", "tense2": "دَارَت / تَدُورُ / دَوَرَان / دُرْ / يُدَارُ / دِيرَ", "type": "verb"},
+  {"tense1": "se dérouler", "tense2": "دارَ / يَدورُ / دَوَران / دُرْ / يُدارُ / ديرَ", "type": "verb"},
   {"tense1": "une fois que", "tense2": "بِمُجَرَّدِ أَنْ", "type": "sentence"},
   {"tense1": "fond", "tense2": "قَاع / قِيعَان / قَاعَان / قِيعَاناً / قَاعَيْن", "type": "word"},
   {"tense1": "se reproduire", "tense2": "تَكَاثَرَت / تَتَكَاثَرُ / تَكَاثُر / تَكَاثَرْ / يُتَكَاثَرُ / تُكُوثِرَ", "type": "verb"},
@@ -1537,7 +1537,25 @@
   {"tense1": "farce", "tense2": "حَشْو / حَشْوات / حَشْوان / حَشْواتٍ / حَشْوَيْن", "type": "word"},
   {"tense1": "gratitude", "tense2": "اِمْتِنان / اِمْتِنانات / اِمْتِنانان / اِمْتِناناتٍ / اِمْتِنانَيْن", "type": "word"},
   {"tense1": "devoir", "tense2": "دانَ / يَدينُ / دَيْن / دِنْ / يُدانُ / دينَ", "type": "verb"},
-  {"tense1": "supplier", "tense2": "تَوَسَّلَ / يَتَوَسَّلُ / تَوَسُّل / تَوَسَّلْ / يُتَوَسَّلُ / تُوُسِّلَ", "type": "verb"}
+  {"tense1": "supplier", "tense2": "تَوَسَّلَ / يَتَوَسَّلُ / تَوَسُّل / تَوَسَّلْ / يُتَوَسَّلُ / تُوُسِّلَ", "type": "verb"},
+  {"tense1": "sanction", "tense2": "عُقُوبَةٌ / عُقُوبَاتٌ / عُقُوبَتَانِ / عُقُوبَاتٍ / عُقُوبَتَيْنِ", "type": "word"},
+  {"tense1": "publication", "tense2": "مَنْشُورٌ / مَنْشُورَاتٌ / مَنْشُورَانِ / مَنْشُورَاتٍ / مَنْشُورَيْنِ", "type": "word"},
+  {"tense1": "affirmer", "tense2": "أَكَّدَ / يُؤَكِّدُ / تَأْكِيد / أَكِّدْ / يُؤَكَّدُ / أُكِّدَ", "type": "verb"},
+  {"tense1": "identique", "tense2": "مُتَطَابِقٌ / مُتَطَابِقُونَ / مُتَطَابِقَانِ / مُتَطَابِقِينَ / مُتَطَابِقَيْنِ", "type": "word"},
+  {"tense1": "conséquence", "tense2": "نَتِيجَةٌ / نَتَائِجُ / نَتِيجَتَانِ / نَتَائِجٍ / نَتِيجَتَيْنِ", "type": "word"},
+  {"tense1": "géant", "tense2": "عِمْلَاقٌ / عَمَالِقَةٌ / عِمْلَاقَانِ / عَمَالِقَةٍ / عِمْلَاقَيْنِ", "type": "word"},
+  {"tense1": "malpoli", "tense2": "وَقِحٌ / وُقَحَاءُ / وَقِحَانِ / وُقَحِينَ / وَقِحَيْنِ", "type": "word"},
+  {"tense1": "cariñoso", "tense2": "حَنُونٌ / حَنُونُونَ / حَنُونَانِ / حَنُونِينَ / حَنُونَيْنِ", "type": "word"},
+  {"tense1": "montrer", "tense2": "أَطَلَّ / يُطِلُّ / إِطْلَال / أَطِلَّ / يُطَلُّ / أُطِلَّ", "type": "verb"},
+  {"tense1": "arruiner", "tense2": "تَلِفَ / يَتْلِفُ / تَلَف / تَلِفْ / يُتْلَفُ / تُلِفَ", "type": "verb"},
+  {"tense1": "misère", "tense2": "بُؤْسٌ / بُؤُوسٌ / بُؤْسَانِ / بُؤُوسٍ / بُؤْسَيْنِ", "type": "word"},
+  {"tense1": "sortilège", "tense2": "تَعْوِيذَةٌ / تَعَاوِيذُ / تَعْوِيذَتَانِ / تَعَاوِيذٍ / تَعْوِيذَتَيْنِ", "type": "word"},
+  {"tense1": "bloqué", "tense2": "مُحَاصَرٌ / مُحَاصَرُونَ / مُحَاصَرَانِ / مُحَاصَرِينَ / مُحَاصَرَيْنِ", "type": "word"},
+  {"tense1": "fusée", "tense2": "صَارُوخٌ / صَوَارِيخُ / صَارُوخَانِ / صَوَارِيخٍ / صَارُوخَيْنِ", "type": "word"},
+  {"tense1": "effrayer", "tense2": "أَفْزَعَ / يُفْزِعُ / إِفْزَاع / أَفْزِعْ / يُفْزَعُ / أُفْزِعَ", "type": "verb"},
+  {"tense1": "controversé", "tense2": "مُثِيرٌ لِلْجَدَلِ / مُثِيرُونَ لِلْجَدَلِ / مُثِيرَانِ لِلْجَدَلِ / مُثِيرِينَ لِلْجَدَلِ / مُثِيرَيْنِ لِلْجَدَلِ", "type": "word"},
+  {"tense1": "médicament", "tense2": "عِقَارٌ / عَقَاقِيرُ / عِقَارَانِ / عَقَاقِيرٍ / عِقَارَيْنِ", "type": "word"},
+  {"tense1": "penché", "tense2": "مَائِلٌ / مَائِلُونَ / مَائِلَانِ / مَائِلِينَ / مَائِلَيْنِ", "type": "word"}
 ]
 
 
