new arabic words

--- a/index.html
+++ b/index.html
@@ -1555,8 +1555,16 @@
   {"tense1": "effrayer", "tense2": "أَفْزَعَ / يُفْزِعُ / إِفْزَاع / أَفْزِعْ / يُفْزَعُ / أُفْزِعَ", "type": "verb"},
   {"tense1": "controversé", "tense2": "مُثِيرٌ لِلْجَدَلِ / مُثِيرُونَ لِلْجَدَلِ / مُثِيرَانِ لِلْجَدَلِ / مُثِيرِينَ لِلْجَدَلِ / مُثِيرَيْنِ لِلْجَدَلِ", "type": "word"},
   {"tense1": "médicament", "tense2": "عِقَارٌ / عَقَاقِيرُ / عِقَارَانِ / عَقَاقِيرٍ / عِقَارَيْنِ", "type": "word"},
-  {"tense1": "penché", "tense2": "مَائِلٌ / مَائِلُونَ / مَائِلَانِ / مَائِلِينَ / مَائِلَيْنِ", "type": "word"}
-]
+  {"tense1": "penché", "tense2": "مَائِلٌ / مَائِلُونَ / مَائِلَانِ / مَائِلِينَ / مَائِلَيْنِ", "type": "word"},
+  { "tense1": "Provision", "tense2": "مُؤُونَةٌ/مُؤُونَاتٌ/مُؤُونَتَانِ/مُؤُونَاتِ/مُؤُونَتَيْنِ", "type": "word" },
+  { "tense1": "Pessimisme", "tense2": "تَشَاؤُمٌ/تَشَاؤُمَاتٌ/تَشَاؤُمَانِ/تَشَاؤُمَاتِ/تَشَاؤُمَيْنِ", "type": "word" },
+  { "tense1": "Tirer", "tense2": "شَدَّ/يَشُدُّ/شَدٌّ/اِشْدُ/يُشَدُّ/شُدَّ", "type": "verb" },
+  { "tense1": "Se diviser", "tense2": "اِنْشَطَرَ/يَنْشَطِرُ/اِنْشِطَارٌ/اِنْشَطِرْ/يُنْشَطَرُ/اُنْشُطِرَ", "type": "verb" },
+  { "tense1": "Influence", "tense2": "نُفُوذٌ/نُفُوذَاتٌ/نُفُوذَانِ/نُفُوذَاتِ/نُفُوذَيْنِ", "type": "word" },
+  { "tense1": "Mouette", "tense2": "نَوْرَسٌ/نَوَارِسُ/نَوْرَسَانِ/نَوَارِسَ/نَوْرَسَيْنِ", "type": "word" },
+  { "tense1": "Terre", "tense2": "يَابِسَةٌ/يَابِسَاتٌ/يَابِسَتَانِ/يَابِسَاتِ/يَابِسَتَيْنِ", "type": "word" },
+  { "tense1": "Étonner", "tense2": "اِسْتَغْرَبَ/يَسْتَغْرِبُ/اِسْتِغْرَابٌ/اِسْتَغْرِبْ/يُسْتَغْرَبُ/اُسْتُغْرِبَ", "type": "verb" }
+];
 
 
 
