new arabic words

--- a/index.html
+++ b/index.html
@@ -1570,7 +1570,31 @@
   { "tense1": "Influence", "tense2": "نُفُوذٌ/نُفُوذَاتٌ/نُفُوذَانِ/نُفُوذَاتِ/نُفُوذَيْنِ", "type": "word" },
   { "tense1": "Mouette", "tense2": "نَوْرَسٌ/نَوَارِسُ/نَوْرَسَانِ/نَوَارِسَ/نَوْرَسَيْنِ", "type": "word" },
   { "tense1": "Terre", "tense2": "يَابِسَةٌ/يَابِسَاتٌ/يَابِسَتَانِ/يَابِسَاتِ/يَابِسَتَيْنِ", "type": "word" },
-  { "tense1": "Étonner", "tense2": "اِسْتَغْرَبَ/يَسْتَغْرِبُ/اِسْتِغْرَابٌ/اِسْتَغْرِبْ/يُسْتَغْرَبُ/اُسْتُغْرِبَ", "type": "verb" }
+  { "tense1": "Étonner", "tense2": "اِسْتَغْرَبَ/يَسْتَغْرِبُ/اِسْتِغْرَابٌ/اِسْتَغْرِبْ/يُسْتَغْرَبُ/اُسْتُغْرِبَ", "type": "verb" },
+  {"tense1": "prison", "tense2": "زِنْزَانَةٌ / زِنْزَانَاتٌ / زِنْزَانَتَانِ / زِنْزَانَاتًا / زِنْزَانَتَيْنِ", "type": "word"},
+  {"tense1": "incomplet", "tense2": "نَاقِصٌ / نَاقِصُونَ / نَاقِصَانِ / نَاقِصِينَ / نَاقِصَيْنِ", "type": "word"},
+  {"tense1": "voile", "tense2": "شِّرَاعِيُّ / شِّرَاعِيُّونَ / شِّرَاعِيَّانِ / شِّرَاعِيِّينَ / شِّرَاعِيَّيْنِ", "type": "word"},
+  {"tense1": "traître", "tense2": "خَائِنٌ / خَائِنُونَ / خَائِنَانِ / خَائِنِينَ / خَائِنَيْنِ", "type": "word"},
+  {"tense1": "mur", "tense2": "حَائِطٌ / حِيطَانٌ / حَائِطَانِ / حِيطَانًا / حَائِطَيْنِ", "type": "word"},
+  {"tense1": "lisse", "tense2": "أَمْلَسُ / أَمَالِسُ / أَمْلَسَانِ / أَمَالِسَ / أَمْلَسَيْنِ", "type": "word"},
+  {"tense1": "escroc", "tense2": "مُحْتَالٌ / مُحْتَالُونَ / مُحْتَالَانِ / مُحْتَالِينَ / مُحْتَالَيْنِ", "type": "word"},
+  {"tense1": "séparer", "tense2": "اِفْتَرَقَ / يَفْتَرِقُ / اِفْتِرَاقٌ / اِفْتَرِقْ / يُفْتَرَقُ / اُفْتُرِقَ", "type": "verb"},
+  {"tense1": "semblable", "tense2": "مَثِيلٌ / أَمْثَالٌ / مَثِيلَانِ / أَمْثَالًا / مَثِيلَيْنِ", "type": "word"},
+  {"tense1": "vouloir", "tense2": "شَاءَ / يَشَاءُ / مَشِيئَةٌ / شَأْ / يُشَاءُ / شُئِيَ", "type": "verb"},
+  {"tense1": "s’emparer", "tense2": "اِسْتَوْلَى / يَسْتَوْلِي / اِسْتِيلَاءٌ / اِسْتَوْلِ / يُسْتَوْلَى / اُسْتُولِيَ", "type": "verb"},
+  {"tense1": "légendaire", "tense2": "خُرَافِيٌّ / خُرَافِيُّونَ / خُرَافِيَّانِ / خُرَافِيِّينَ / خُرَافِيَّيْنِ", "type": "word"},
+  {"tense1": "capturer", "tense2": "أَسَرَ / يَأْسِرُ / أَسْرٌ / أَسِرْ / يُؤْسَرُ / أُسِرَ", "type": "verb"},
+  {"tense1": "trembler", "tense2": "اِرْتَجَفَ / يَرْتَجِفُ / اِرْتِجَافٌ / اِرْتَجِفْ / يُرْتَجَفُ / اُرْتُجِفَ", "type": "verb"},
+  {"tense1": "forteresse", "tense2": "حِصْنٌ / حُصُونٌ / حِصْنَانِ / حُصُونًا / حِصْنَيْنِ", "type": "word"},
+  {"tense1": "enfer", "tense2": "جَحِيمٌ / جَحِيمَاتٌ / جَحِيمَانِ / جَحِيمَاتًا / جَحِيمَيْنِ", "type": "word"},
+  {"tense1": "disparaître", "tense2": "تَلَاشَى / يَتَلَاشَى / تَلَاشٍ / تَلَاشَ / يُتَلَاشَى / تُلُوشِيَ", "type": "verb"},
+  {"tense1": "solitude", "tense2": "اِنْفِرَادٌ / اِنْفِرَادَاتٌ / اِنْفِرَادَانِ / اِنْفِرَادَاتًا / اِنْفِرَادَيْنِ", "type": "word"},
+  {"tense1": "s’enfuir", "tense2": "أَفْلَتَ / يُفْلِتُ / إِفْلَاتٌ / أَفْلِتْ / يُفْلَتُ / أُفْلِتَ", "type": "verb"},
+  {"tense1": "lâche", "tense2": "جَبَانٌ / جُبَنَاءُ / جَبَانَانِ / جُبَنَاءَ / جَبَانَيْنِ", "type": "word"},
+  {"tense1": "fusil", "tense2": "بُنْدُقِيَّةٌ / بَنَادِقُ / بُنْدُقِيَّتَانِ / بَنَادِقَ / بُنْدُقِيَّتَيْنِ", "type": "word"},
+  {"tense1": "bataille", "tense2": "مَعْرَكَةٌ / مَعَارِكُ / مَعْرَكَتَانِ / مَعَارِكَ / مَعْرَكَتَيْنِ", "type": "word"},
+  {"tense1": "tissu", "tense2": "قِمَاشٌ / أَقْمِشَةٌ / قِمَاشَانِ / أَقْمِشَةً / قِمَاشَيْنِ", "type": "word"},
+  {"tense1": "torche", "tense2": "مِشْعَلٌ / مَشَاعِلُ / مِشْعَلَانِ / مَشَاعِلَ / مِشْعَلَيْنِ", "type": "word"}
 ];
 
 
