new arabic words

--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,6 @@
   {"tense1": "effrayer", "tense2": "أَفْزَعَ / يُفْزِعُ / إِفْزَاع / أَفْزِعْ / يُفْزَعُ / أُفْزِعَ", "type": "verb"},
   {"tense1": "controversé", "tense2": "مُثِيرٌ لِلْجَدَلِ / مُثِيرُونَ لِلْجَدَلِ / مُثِيرَانِ لِلْجَدَلِ / مُثِيرِينَ لِلْجَدَلِ / مُثِيرَيْنِ لِلْجَدَلِ", "type": "word"},
   {"tense1": "médicament", "tense2": "عِقَارٌ / عَقَاقِيرُ / عِقَارَانِ / عَقَاقِيرٍ / عِقَارَيْنِ", "type": "word"},
-  {"tense1": "penché", "tense2": "مَائِلٌ / مَائِلُونَ / مَائِلَانِ / مَائِلِينَ / مَائِلَيْنِ", "type": "word"},
   { "tense1": "Provision", "tense2": "مُؤُونَةٌ/مُؤُونَاتٌ/مُؤُونَتَانِ/مُؤُونَاتِ/مُؤُونَتَيْنِ", "type": "word" },
   { "tense1": "Pessimisme", "tense2": "تَشَاؤُمٌ/تَشَاؤُمَاتٌ/تَشَاؤُمَانِ/تَشَاؤُمَاتِ/تَشَاؤُمَيْنِ", "type": "word" },
   { "tense1": "Tirer", "tense2": "شَدَّ/يَشُدُّ/شَدٌّ/اِشْدُ/يُشَدُّ/شُدَّ", "type": "verb" },
@@ -1587,7 +1586,29 @@
   {"tense1": "fusil", "tense2": "بُنْدُقِيَّةٌ / بَنَادِقُ / بُنْدُقِيَّتَانِ / بَنَادِقَ / بُنْدُقِيَّتَيْنِ", "type": "word"},
   {"tense1": "bataille", "tense2": "مَعْرَكَةٌ / مَعَارِكُ / مَعْرَكَتَانِ / مَعَارِكَ / مَعْرَكَتَيْنِ", "type": "word"},
   {"tense1": "tissu", "tense2": "قِمَاشٌ / أَقْمِشَةٌ / قِمَاشَانِ / أَقْمِشَةً / قِمَاشَيْنِ", "type": "word"},
-  {"tense1": "torche", "tense2": "مِشْعَلٌ / مَشَاعِلُ / مِشْعَلَانِ / مَشَاعِلَ / مِشْعَلَيْنِ", "type": "word"}
+  {"tense1": "torche", "tense2": "مِشْعَلٌ / مَشَاعِلُ / مِشْعَلَانِ / مَشَاعِلَ / مِشْعَلَيْنِ", "type": "word"},
+  {"tense1": "verser", "tense2": "أَسْكَبَ/يُسْكِبُ/إِسْكَاب/أَسْكِبْ/يُسْكَبُ/أُسْكِبَ", "type": "verb"},
+  {"tense1": "poudre", "tense2": "بَارُودَة/بَارُود/بَارُودَتَانِ/بَارُودَات/بَارُودَتَيْنِ", "type": "word"},
+  {"tense1": "enflammé", "tense2": "مُشْتَعِل/مُشْتَعِلُونَ/مُشْتَعِلَانِ/مُشْتَعِلِينَ/مُشْتَعِلَيْنِ", "type": "word"},
+  {"tense1": "caverne", "tense2": "مَغَارَة/مَغَارَات/مَغَارَتَانِ/مَغَارَات/مَغَارَتَيْنِ", "type": "word"},
+  {"tense1": "aile", "tense2": "جَنَاح/أَجْنِحَة/جَنَاحَانِ/أَجْنِحَة/جَنَاحَيْنِ", "type": "word"},
+  {"tense1": "frontière", "tense2": "حَدّ/حُدُود/حَدَّانِ/حُدُود/حَدَّيْنِ", "type": "word"},
+  {"tense1": "poignet", "tense2": "مِعْصَم/مَعَاصِم/مِعْصَمَانِ/مَعَاصِمَ/مِعْصَمَيْنِ", "type": "word"},
+  {"tense1": "modestie", "tense2": "تَوَاضُع/تَوَاضُعَات/تَوَاضُعَانِ/تَوَاضُعَات/تَوَاضُعَيْنِ", "type": "word"},
+  {"tense1": "canoë", "tense2": "زَوْرَق/زَوَارِق/زَوْرَقَانِ/زَوَارِقَ/زَوْرَقَيْنِ", "type": "word"},
+  {"tense1": "débattre", "tense2": "تَجَادَلَ/يَتَجَادَلُ/تَجَادُل/تَجَادَلْ/يُتَجَادَلُ/تُجُودِلَ", "type": "verb"},
+  {"tense1": "se taire", "tense2": "سَكَتَ/يَسْكُتُ/سُكُوت/اِسْكُتْ/يُسْكُتُ/سُكِتَ", "type": "verb"},
+  {"tense1": "résister", "tense2": "صَمَدَ/يَصْمُدُ/صُمُود/اِصْمُدْ/يُصْمَدُ/صُمِدَ", "type": "verb"},
+  {"tense1": "sacrifier", "tense2": "ضَحَّى/يُضَحِّي/تَضْحِيَة/ضَحِّ/يُضَحَّى/ضُحِّيَ", "type": "verb"},
+  {"tense1": "grogner", "tense2": "تَذَمَّرَ/يَتَذَمَّرُ/تَذَمُّر/تَذَمَّرْ/يُتَذَمَّرُ/تُذُمِّرَ", "type": "verb"},
+  {"tense1": "(enfant) gâté", "tense2": "مُدَلَّل/مُدَلَّلُونَ/مُدَلَّلَانِ/مُدَلَّلِينَ/مُدَلَّلَيْنِ", "type": "word"},
+  {"tense1": "part", "tense2": "نَصِيب/أَنْصِبَاء/نَصِيبَانِ/أَنْصِبَاء/نَصِيبَيْنِ", "type": "word"},
+  {"tense1": "échouer", "tense2": "أَخْفَقَ/يُخْفِقُ/إِخْفَاق/أَخْفِقْ/يُخْفَقُ/أُخْفِقَ", "type": "verb"},
+  {"tense1": "s’étouffer", "tense2": "اخْتَنَقَ/يَخْتَنِقُ/اخْتِنَاق/اخْتَنِقْ/يُخْتَنَقُ/اختُنِقَ", "type": "verb"},
+  {"tense1": "sein", "tense2": "صَدْر/صُدُور/صَدْرَانِ/صُدُور/صَدْرَيْنِ", "type": "word"},
+  {"tense1": "lave", "tense2": "حِمَم/حِمَم/حِمَمَانِ/حِمَم/حِمَمَيْنِ", "type": "word"},
+  {"tense1": "indiquer", "tense2": "دَلَّ/يَدُلُّ/دَلَالَة/دُلَّ/يُدَلُّ/دُلَّ", "type": "verb"},
+  {"tense1": "prouver", "tense2": "بَرْهَنَ/يُبَرْهِنُ/بَرْهَنَة/بَرْهِنْ/يُبَرْهَنُ/بُرْهِنَ", "type": "verb"}
 ];
 
 
@@ -2621,7 +2642,17 @@ document.querySelectorAll('.language label').forEach(function(label) {
                 listItem.onclick = () => startList(i, i + listLength, listNumber);
                 wordLists.appendChild(listItem);
             }
+
+            const listItemLast50 = document.createElement('a');
+            listItemLast50.href = '#';
+            listItemLast50.className = 'list-group-item list-group-item-action';
+            listItemLast50.innerText = `Last 50`;
+            const completionsLast50 = getLocalStorage(`list999_${get_language()}`) || 0;
+            listItemLast50.innerText += ` (Completedo ${completions} veces)`;
+            listItemLast50.onclick = () => startList(-1, -1, 999);
+            wordLists.appendChild(listItemLast50);
         }
+
 
         function shuffle(array) {
             for (let i = array.length - 1; i > 0; i--) {
@@ -2637,6 +2668,10 @@ document.querySelectorAll('.language label').forEach(function(label) {
                     const randomIndex = Math.floor(Math.random() * get_words().length);
                     currentList.push(get_words()[randomIndex]);
                 }
+            } else if (listNumber == 999) {
+                const words = get_words();
+                currentList = words.slice(words.length - 50, words.length);
+                shuffle(currentList);
             } else {
                 currentList = get_words().slice(start, end);
                 shuffle(currentList);
