--- a/index.html
+++ b/index.html
@@ -1605,26 +1605,26 @@
   {"tense1": "part", "tense2": "نَصِيب/أَنْصِبَاء/نَصِيبَانِ/أَنْصِبَاء/نَصِيبَيْنِ", "type": "word"},
   {"tense1": "échouer", "tense2": "أَخْفَقَ/يُخْفِقُ/إِخْفَاق/أَخْفِقْ/يُخْفَقُ/أُخْفِقَ", "type": "verb"},
   {"tense1": "s’étouffer", "tense2": "اخْتَنَقَ/يَخْتَنِقُ/اخْتِنَاق/اخْتَنِقْ/يُخْتَنَقُ/اختُنِقَ", "type": "verb"},
-  {"tense1": "sein", "tense2": "صَدْر/صُدُور/صَدْرَانِ/صُدُور/صَدْرَيْنِ", "type": "word"},
-  {"tense1": "lave", "tense2": "حِمَم/حِمَم/حِمَمَانِ/حِمَم/حِمَمَيْنِ", "type": "word"},
+  {"tense1": "sein", "tense2": "صَدْرَانِ/صُدُور/صَدْر/صَدْرَيْنِ/صُدُور/صَدْرَيْنِ", "type": "word"},
+  {"tense1": "lave", "tense2": "حِمَمَانِ/حِمَم/حِمَم/حِمَمَيْنِ/حِمَم/حِمَمَيْنِ", "type": "word"},
   {"tense1": "indiquer", "tense2": "دَلَّ/يَدُلُّ/دَلَالَة/دُلَّ/يُدَلُّ/دُلَّ", "type": "verb"},
   {"tense1": "prouver", "tense2": "بَرْهَنَ/يُبَرْهِنُ/بَرْهَنَة/بَرْهِنْ/يُبَرْهَنُ/بُرْهِنَ", "type": "verb"},
-  {"tense1": "influencer", "tense2": "يُؤَثِّرُ/أَثَّرَ/تَأْثِير/أَثِّرْ/يُؤَثَّرُ/أُثِّرَ", "type": "verb"},
-  {"tense1": "exécuter", "tense2": "يُعْدِمُ/أَعْدَمَ/إِعْدَام/أَعْدِمْ/يُعْدَمُ/أُعْدِمَ", "type": "verb"},
-  {"tense1": "être surpris", "tense2": "يَتَعَجَّبُ/تَعَجَّبَ/تَعَجُّب/تَعَجَّبْ/يُتَعَجَّبُ/تُعُجِّبَ", "type": "verb"},
-  {"tense1": "se soumettre", "tense2": "يَخْضَعُ/خَضَعَ/خُضُوع/اِخْضَعْ/يُخْضَعُ/خُضِعَ", "type": "verb"},
+  {"tense1": "influencer", "tense2": "أَثَّرَ/يُؤَثِّرُ/تَأْثِير/أَثِّرْ/يُؤَثَّرُ/أُثِّرَ", "type": "verb"},
+  {"tense1": "exécuter", "tense2": "أَعْدَمَ/يُعْدِمُ/إِعْدَام/أَعْدِمْ/يُعْدَمُ/أُعْدِمَ", "type": "verb"},
+  {"tense1": "être surpris", "tense2": "تَعَجَّبَ/يَتَعَجَّبُ/تَعَجُّب/تَعَجَّبْ/يُتَعَجَّبُ/تُعُجِّبَ", "type": "verb"},
+  {"tense1": "se soumettre", "tense2": "خَضَعَ/يَخْضَعُ/خُضُوع/اِخْضَعْ/يُخْضَعُ/خُضِعَ", "type": "verb"},
   {"tense1": "désert", "tense2": "مَهْجُور/مَهْجُورُون/مَهْجُورَان/مَهْجُورِينَ/مَهْجُورَيْنِ", "type": "word"},
   {"tense1": "ruine", "tense2": "خَرَاب/خَرَابَات/خَرَابَان/خَرَابَاتٍ/خَرَابَيْنِ", "type": "word"},
   {"tense1": "précieux", "tense2": "ثَمِين/ثَمِينُون/ثَمِينَان/ثَمِينِينَ/ثَمِينَيْنِ", "type": "word"},
-  {"tense1": "ronflement", "tense2": "شَخِير/شَخِيرَات/شَخِيرَان/شَخِيرَاتٍ/شَخِيرَيْنِ", "type": "word"},
-  {"tense1": "être en panne", "tense2": "يَتَعَطَّلُ/تَعَطَّلَ/تَعَطُّل/تَعَطَّلْ/يُتَعَطَّلُ/تُعُطِّلَ", "type": "verb"},
+  {"tense1": "être en panne", "tense2": "تَعَطَّلَ/يَتَعَطَّلُ/تَعَطُّل/تَعَطَّلْ/يُتَعَطَّلُ/تُعُطِّلَ", "type": "verb"},
   {"tense1": "qui coule", "tense2": "مُتَدَفِّق/مُتَدَفِّقُون/مُتَدَفِّقَان/مُتَدَفِّقِينَ/مُتَدَفِّقَيْنِ", "type": "word"},
   {"tense1": "fond", "tense2": "قَعْر/قُعُور/قَعْرَان/قُعُورٍ/قَعْرَيْنِ", "type": "word"},
-  {"tense1": "s’appuyer sur", "tense2": "يَتَّكِئُ/اِتَّكأَ/اِتِّكَاء/اِتَّكِئْ/يُتَّكَى/اُتُّكِئَ", "type": "verb"},
-  {"tense1": "traverser", "tense2": "يَجْتَازُ/اِجْتَازَ/اِجْتِيَاز/اِجْتَزْ/يُجْتَازُ/اُجْتِيزَ", "type": "verb"},
-  {"tense1": "correspondre", "tense2": "يَتَوَافَقُ/تَوَافَقَ/تَوَافُق/تَوَافَقْ/يُتَوَافَقُ/تُوُوفِقَ", "type": "verb"},
-  {"tense1": "battre", "tense2": "يَهْزِمُ/هَزَمَ/هَزِيمَة/اِهْزِمْ/يُهْزَمُ/هُزِمَ", "type": "verb"}
-];
+  {"tense1": "s’appuyer sur", "tense2": "اِتَّكأَ/يَتَّكِئُ/اِتِّكَاء/اِتَّكِئْ/يُتَّكَى/اُتُّكِئَ", "type": "verb"},
+  {"tense1": "traverser", "tense2": "اِجْتَازَ/يَجْتَازُ/اِجْتِيَاز/اِجْتَزْ/يُجْتَازُ/اُجْتِيزَ", "type": "verb"},
+  {"tense1": "Etre d´accord", "tense2": "تَوَافَقَ/يَتَوَافَقُ/تَوَافُق/تَوَافَقْ/يُتَوَافَقُ/تُوُوفِقَ", "type": "verb"},
+  {"tense1": "battre", "tense2": "هَزَمَ/يَهْزِمُ/هَزِيمَة/اِهْزِمْ/يُهْزَمُ/هُزِمَ", "type": "verb"},
+  {"tense1": "ronfler", "tense2": "تَشْخِير/يَرْتَخِرُ/شَخِير/تَشْخِيرْ/يُشْخَرُ/تُشْخِرَ", "type": "verb"}
+]
 
 
 
