new arabic words

--- a/index.html
+++ b/index.html
@@ -1623,8 +1623,29 @@
   {"tense1": "traverser", "tense2": "اِجْتَازَ/يَجْتَازُ/اِجْتِيَاز/اِجْتَزْ/يُجْتَازُ/اُجْتِيزَ", "type": "verb"},
   {"tense1": "Etre d´accord", "tense2": "تَوَافَقَ/يَتَوَافَقُ/تَوَافُق/تَوَافَقْ/يُتَوَافَقُ/تُوُوفِقَ", "type": "verb"},
   {"tense1": "battre", "tense2": "هَزَمَ/يَهْزِمُ/هَزِيمَة/اِهْزِمْ/يُهْزَمُ/هُزِمَ", "type": "verb"},
-  {"tense1": "ronfler", "tense2": "تَشْخِير/يَرْتَخِرُ/شَخِير/تَشْخِيرْ/يُشْخَرُ/تُشْخِرَ", "type": "verb"}
-]
+  {"tense1": "ronfler", "tense2": "شَخَرَ/يَشْخُرُ/شَخِير/اِشْخُرْ/يُشْخَرُ/شُخِرَ", "type": "verb"},
+  {"tense1": "cadavre", "tense2": "جُثَّة/جُثَث/جُثَّتَانِ/جُثَثًا/جُثَّتَيْنِ", "type": "word"},
+  {"tense1": "Comploter", "tense2": "دَبَّرَ/يُدَبِّرُ/تَدْبِير/دَبِّرْ/يُدَبَّرُ/دُبِّرَ", "type": "verb"},
+  {"tense1": "S’écouler", "tense2": "تَدَفَّقَ/يَتَدَفَّقُ/تَدَفُّق/تَدَفَّقْ/يُتَدَفَّقُ/تُدُفِّقَ", "type": "verb"},
+  {"tense1": "paralysie", "tense2": "شَلَل/شَلَلات/شَلَلَانِ/شَلَلاتٍ/شَلَلَيْنِ", "type": "word"},
+  {"tense1": "En avoir marre", "tense2": "سَئِمَ/يَسْأَمُ/سَآمَة/اِسْأَمْ/يُسْأَمُ/سُئِمَ", "type": "verb"},
+  {"tense1": "voter", "tense2": "صَوَّتَ/يُصَوِّتُ/تَصْوِيت/صَوِّتْ/يُصَوَّتُ/صُوِّتَ", "type": "verb"},
+  {"tense1": "impôt", "tense2": "ضَرِيبَة/ضَرَائِب/ضَرِيبَتَانِ/ضَرَائِبَ/ضَرِيبَتَيْنِ", "type": "word"},
+  {"tense1": "interdire", "tense2": "حَظَرَ/يَحْظُرُ/حَظْر/اِحْظُرْ/يُحْظَرُ/حُظِرَ", "type": "verb"},
+  {"tense1": "faille/défaut", "tense2": "خَلَل/خِلَال/خَلَلَانِ/خِلَالًا/خَلَلَيْنِ", "type": "word"},
+  {"tense1": "Intérêt", "tense2": "مَصْلَحَة/مَصَالِح/مَصْلَحَتَانِ/مَصَالِحَ/مَصْلَحَتَيْنِ", "type": "word"},
+  {"tense1": "épaisseur", "tense2": "سُمْك/سُمُوك/سُمْكَانِ/سُمُوكًا/سُمْكَيْنِ", "type": "word"},
+  {"tense1": "Excusez-moi", "tense2": "عَفْوًا", "type": "sentence"},
+  {"tense1": "Se soucier", "tense2": "اِكْتَرَثَ/يَكْتَرِثُ/اِكْتِرَاث/اِكْتَرِثْ/يُكْتَرَثُ/اُكْتُرِثَ", "type": "verb"},
+  {"tense1": "Accepter", "tense2": "رَضِيَ/يَرْضَى/رِضًى/اِرْضَ/يُرْضَى/رُضِيَ", "type": "verb"},
+  {"tense1": "S’allier", "tense2": "تَحَالَفَ/يَتَحَالَفُ/تَحَالُف/تَحَالَفْ/يُتَحَالَفُ/تُحُولِفَ", "type": "verb"},
+  {"tense1": "tyrannie", "tense2": "اِسْتِبْدَاد/اِسْتِبْدَادَات/اِسْتِبْدَادَانِ/اِسْتِبْدَادَاتٍ/اِسْتِبْدَادَيْنِ", "type": "word"},
+  {"tense1": "unir", "tense2": "تَوَحَّدَ/يَتَوَحَّدُ/تَوَحُّد/تَوَحَّدْ/يُتَوَحَّدُ/تُوُحِّدَ", "type": "verb"},
+  {"tense1": "Avoir pitié", "tense2": "تَرَحَّمَ/يَتَرَحَّمُ/تَرَحُّم/تَرَحَّمْ/يُتَرَحَّمُ/تُرُحِّمَ", "type": "verb"},
+  {"tense1": "Le moral", "tense2": "مَعْنَوِيَّة/مَعْنَوِيَّات/مَعْنَوِيَّتَانِ/مَعْنَوِيَّاتٍ/مَعْنَوِيَّتَيْنِ", "type": "word"},
+  {"tense1": "Impliquer", "tense2": "تَوَرَّطَ/يَتَوَرَّطُ/تَوَرُّط/تَوَرَّطْ/يُتَوَرَّطُ/تُوُرِّطَ", "type": "verb"},
+  {"tense1": "Gagner de l’argent", "tense2": "كَسَبَ/يَكْسِبُ/كَسْب/اِكْسِبْ/يُكْسَبُ/كُسِبَ", "type": "verb"}
+];
 
 
 
