new arabic words

--- a/index.html
+++ b/index.html
@@ -1644,8 +1644,32 @@
   {"tense1": "Avoir pitié", "tense2": "تَرَحَّمَ/يَتَرَحَّمُ/تَرَحُّم/تَرَحَّمْ/يُتَرَحَّمُ/تُرُحِّمَ", "type": "verb"},
   {"tense1": "Le moral", "tense2": "مَعْنَوِيَّة/مَعْنَوِيَّات/مَعْنَوِيَّتَانِ/مَعْنَوِيَّاتٍ/مَعْنَوِيَّتَيْنِ", "type": "word"},
   {"tense1": "Impliquer", "tense2": "تَوَرَّطَ/يَتَوَرَّطُ/تَوَرُّط/تَوَرَّطْ/يُتَوَرَّطُ/تُوُرِّطَ", "type": "verb"},
-  {"tense1": "Gagner de l’argent", "tense2": "كَسَبَ/يَكْسِبُ/كَسْب/اِكْسِبْ/يُكْسَبُ/كُسِبَ", "type": "verb"}
+  {"tense1": "Gagner de l’argent", "tense2": "كَسَبَ/يَكْسِبُ/كَسْب/اِكْسِبْ/يُكْسَبُ/كُسِبَ", "type": "verb"},
+  {"tense1": "Défier", "tense2": "تَحَدَّى/يَتَحَدَّى/تَحَدٍّ/تَحَدَّ/يُتَحَدَّى/تُحُدِّيَ", "type": "verb"},
+  {"tense1": "Complicité", "tense2": "تَوَاطُؤ/تَوَاطُؤَات/تَوَاطُؤَان/تَوَاطُؤَاتٍ/تَوَاطُؤَيْن", "type": "word"},
+  {"tense1": "Mentionner", "tense2": "ذَكَرَ/يَذْكُرُ/ذِكْر/اُذْكُرْ/يُذْكَرُ/ذُكِرَ", "type": "verb"},
+  {"tense1": "Crise", "tense2": "أَزْمَة/أَزَمَات/أَزْمَتَان/أَزَمَاتٍ/أَزْمَتَيْن", "type": "word"},
+  {"tense1": "Expression du visage", "tense2": "تَعْبِير/تَعَابِير/تَعْبِيرَان/تَعَابِيرٍ/تَعْبِيرَيْن", "type": "word"},
+  {"tense1": "Se déclencher", "tense2": "نَشَبَ/يَنْشُبُ/نُشُوب/اِنْشَبْ/يُنْشَبُ/نُشِبَ", "type": "verb"},
+  {"tense1": "Disparaître", "tense2": "اِنْقَرَضَ/يَنْقَرِضُ/اِنْقِرَاض/اِنْقَرِضْ/يُنْقَرَضُ/اُنْقُرِضَ", "type": "verb"},
+  {"tense1": "Accompagner", "tense2": "صَحِبَ/يَصْحَبُ/صُحْبَة/اِصْحَبْ/يُصْحَبُ/صُحِبَ", "type": "verb"},
+  {"tense1": "Raisonnable", "tense2": "مَعْقُول/مَعْقُولُون/مَعْقُولَان/مَعْقُولِينَ/مَعْقُولَيْن", "type": "word"},
+  {"tense1": "Prospérer", "tense2": "اِزْدَهَرَ/يَزْدَهِرُ/اِزْدِهَار/اِزْدَهِرْ/يُزْدَهَرُ/اُزْدُهِرَ", "type": "verb"},
+  {"tense1": "Durer", "tense2": "دَامَ/يَدُومُ/دَوَام/دُمْ/يُدَامُ/دِيمَ", "type": "verb"},
+  {"tense1": "Égaux", "tense2": "مُتَسَاوٍ/مُتَسَاوُون/مُتَسَاوِيَان/مُتَسَاوِينَ/مُتَسَاوِيَيْن", "type": "word"},
+  {"tense1": "Otage", "tense2": "رَهِينَة/رَهَائِن/رَهِينَتَان/رَهَائِنٍ/رَهِينَتَيْن", "type": "word"},
+  {"tense1": "Objection", "tense2": "اِعْتِرَاض/اِعْتِرَاضَات/اِعْتِرَاضَان/اِعْتِرَاضَاتٍ/اِعْتِرَاضَيْن", "type": "word"},
+  {"tense1": "Espace (m²)", "tense2": "فُسْحَة/فُسَح/فُسْحَتَان/فُسَحٍ/فُسْحَتَيْن", "type": "word"},
+  {"tense1": "Membre", "tense2": "عُضْو/أَعْضَاء/عُضْوَان/أَعْضَاءٍ/عُضْوَيْن", "type": "word"},
+  {"tense1": "Lister", "tense2": "أَدْرَجَ/يُدْرِجُ/إِدْرَاج/أَدْرِجْ/يُدْرَجُ/أُدْرِجَ", "type": "verb"},
+  {"tense1": "Ressources naturelles", "tense2": "المَوَارِد الطَّبِيعِيَّة", "type": "word"},
+  {"tense1": "Réacteur", "tense2": "مُفَاعِل/مُفَاعِلُون/مُفَاعِلَان/مُفَاعِلِينَ/مُفَاعِلَيْن", "type": "word"},
+  {"tense1": "Appuyer", "tense2": "ضَغَطَ/يَضْغَطُ/ضَغْط/اِضْغَطْ/يُضْغَطُ/ضُغِطَ", "type": "verb"},
+  {"tense1": "Couche", "tense2": "طَبَقَة/طَبَقَات/طَبَقَتَان/طَبَقَاتٍ/طَبَقَتَيْن", "type": "word"},
+  {"tense1": "Bouquet", "tense2": "بَاقَة/بَاقَات/بَاقَتَان/بَاقَاتٍ/بَاقَتَيْن", "type": "word"},
+  {"tense1": "Pourri(e)", "tense2": "عَفِن/عَفِنُون/عَفِنَان/عَفِنِينَ/عَفِنَيْن", "type": "word"}
 ];
+
 
 
 
