new arabic words

--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,6 @@
   {"tense1": "farce", "tense2": "حَشْو / حَشْوات / حَشْوان / حَشْواتٍ / حَشْوَيْن", "type": "word"},
   {"tense1": "gratitude", "tense2": "اِمْتِنان / اِمْتِنانات / اِمْتِنانان / اِمْتِناناتٍ / اِمْتِنانَيْن", "type": "word"},
   {"tense1": "devoir", "tense2": "دانَ / يَدينُ / دَيْن / دِنْ / يُدانُ / دينَ", "type": "verb"},
-
   {"tense1": "sanction", "tense2": "عُقُوبَةٌ / عُقُوبَاتٌ / عُقُوبَتَانِ / عُقُوبَاتٍ / عُقُوبَتَيْنِ", "type": "word"},
   {"tense1": "publication", "tense2": "مَنْشُورٌ / مَنْشُورَاتٌ / مَنْشُورَانِ / مَنْشُورَاتٍ / مَنْشُورَيْنِ", "type": "word"},
   {"tense1": "affirmer", "tense2": "أَكَّدَ / يُؤَكِّدُ / تَأْكِيد / أَكِّدْ / يُؤَكَّدُ / أُكِّدَ", "type": "verb"},
@@ -1667,7 +1666,42 @@
   {"tense1": "Appuyer", "tense2": "ضَغَطَ/يَضْغَطُ/ضَغْط/اِضْغَطْ/يُضْغَطُ/ضُغِطَ", "type": "verb"},
   {"tense1": "Couche", "tense2": "طَبَقَة/طَبَقَات/طَبَقَتَان/طَبَقَاتٍ/طَبَقَتَيْن", "type": "word"},
   {"tense1": "Bouquet", "tense2": "بَاقَة/بَاقَات/بَاقَتَان/بَاقَاتٍ/بَاقَتَيْن", "type": "word"},
-  {"tense1": "Pourri(e)", "tense2": "عَفِن/عَفِنُون/عَفِنَان/عَفِنِينَ/عَفِنَيْن", "type": "word"}
+  {"tense1": "Pourri(e)", "tense2": "عَفِن/عَفِنُون/عَفِنَان/عَفِنِينَ/عَفِنَيْن", "type": "word"},
+  {"tense1": "Galaxy", "tense2": "مَجَرَةٌ/مَجَرَّاتٌ/مَجَرَتَانِ/مَجَرَّاتٍ/مَجَرَتَيْنِ", "type": "word"},
+  {"tense1": "antenne", "tense2": "هَوَائِيٌّ/هَوَائِيُّونَ/هَوَائِيَّانِ/هَوَائِيُّينَ/هَوَائِيَّيْنِ", "type": "word"},
+  {"tense1": "foyer", "tense2": "دَارٌ/دُيُورٌ/دَارَتَانِ/دُيُورٍ/دَارَتَيْنِ", "type": "word"},
+  {"tense1": "titre", "tense2": "عُنْوَانٌ/عُناوِينُ/عُنْوَانَانِ/عُناوِينٍ/عُنْوَانَيْنِ", "type": "word"},
+  {"tense1": "Noeud", "tense2": "عُقْدَةٌ/عُقَدٌ/عُقْدَتَانِ/عُقَدٍ/عُقْدَتَيْنِ", "type": "word"},
+  {"tense1": "confortable", "tense2": "مُرِيحَةٌ/مُرِيحَاتٌ/مُرِيحَتَانِ/مُرِيحَاتٍ/مُرِيحَتَيْنِ", "type": "word"},
+  {"tense1": "pyjama", "tense2": "مُنَامَةٌ/مُنَامَاتٌ/مُنَامَتَانِ/مُنَامَاتٍ/مُنَامَتَيْنِ", "type": "word"},
+  {"tense1": "Sain", "tense2": "صِحِّيٌّ/صِحِّيُّونَ/صِحِّيَّانِ/صِحِّيُّينَ/صِحِّيَّيْنِ", "type": "word"},
+  {"tense1": "Base/fondation", "tense2": "قَاعِدَةٌ/قَوَاعِدُ/قَاعِدَتَانِ/قَوَاعِدٍ/قَاعِدَتَيْنِ", "type": "word"},
+  {"tense1": "catapulte", "tense2": "مُنْجَنِيقٌ/مُنْجَنِيقُونَ/مُنْجَنِيقَانِ/مُنْجَنِيقِينَ/مُنْجَنِيقَيْنِ", "type": "word"},
+  {"tense1": "Bambou", "tense2": "خَيْزَرَانٌ/خَيْزَرَانُونَ/خَيْزَرَانَيْنِ/خَيْزَرَانِينَ/خَيْزَرَانَيْنِ", "type": "word"},
+  {"tense1": "Refuge", "tense2": "مَلَاذٌ/مَلَاذُونَ/مَلَاذَانِ/مَلَاذِينَ/مَلَاذَيْنِ", "type": "word"},
+  {"tense1": "descendant", "tense2": "سَلِيلٌ/سَلِيلُونَ/سَلِيلَانِ/سَلِيلِينَ/سَلِيلَيْنِ", "type": "word"},
+  {"tense1": "flamme", "tense2": "لَهَبٌ/لَهَبُونَ/لَهَبَانِ/لَهَبِينَ/لَهَبَيْنِ", "type": "word"},
+  {"tense1": "complot", "tense2": "مُؤَامَرَةٌ/مُؤَامَرَاتٌ/مُؤَامَرَتَانِ/مُؤَامَرَاتٍ/مُؤَامَرَتَيْنِ", "type": "word"},
+  {"tense1": "lacune", "tense2": "فَجْوَةٌ/فَجْوَاتٌ/فَجْوَتَانِ/فَجْوَاتٍ/فَجْوَتَيْنِ", "type": "word"},
+  {"tense1": "Financement", "tense2": "تَمْوِيلٌ/تَمْوِيلُونَ/تَمْوِيلَانِ/تَمْوِيلِينَ/تَمْوِيلَيْنِ", "type": "word"},
+  {"tense1": "Equipement", "tense2": "مُعِدَّةٌ/مُعَدَّاتٌ/مُعِدَّتَانِ/مُعَدَّاتٍ/مُعِدَّتَيْنِ", "type": "word"},
+  {"tense1": "Plonger", "tense2": "غَاصَ/يَغُوصُ/غَوْصٌ/اِغْصْ/يُغْوَصُ/غُوْصَ", "type": "verb"},
+  {"tense1": "Servir", "tense2": "خَدَمَ/يَخْدُمُ/خِدْمَةٌ/اِخْدُمْ/يُخْدَمُ/خُدِمَ", "type": "verb"},
+  {"tense1": "bailler", "tense2": "تَثَاءَبَ/يَتَثَاءَبُ/تَثَاءُبٌ/تَثَاءَبْ/يُتَثَاءَبُ/تُثْتَاءَبَ", "type": "verb"},
+  {"tense1": "Déméler", "tense2": "فَكَّ/يُفَكِّ/فَكٌّ/اُفَكِّ/يُفَكَّ/فُكِّ", "type": "verb"},
+  {"tense1": "Encercler", "tense2": "حَاصَرَ/يُحَاصِرُ/حِوَاصَرَةٌ/اُحَاصِرْ/يُحَاصَرُ/حُوصِرَ", "type": "verb"},
+  {"tense1": "Se blesser", "tense2": "جَرَحَ/يُجْرِحُ/جَرْحٌ/اُجْرَحْ/يُجْرَحُ/جُرِحَ", "type": "verb"},
+  {"tense1": "Jeter", "tense2": "قَذَفَ/يَقْذِفُ/قَذْفٌ/اَقْذِفْ/يُقْذَفُ/قُذِفَ", "type": "verb"},
+  {"tense1": "Accueillir", "tense2": "اسْتَضَافَ/يَسْتَضِيفُ/اسْتِضَافَةٌ/اِسْتَضِيفْ/يُسْتَضَافُ/اسْتُضِيفَ", "type": "verb"},
+  {"tense1": "décirer", "tense2": "مَزَّقَ/يُمَزِّقُ/تَمَزُّقٌ/اُمَزِّقْ/يُمَزَّقُ/مُزَّقَ", "type": "verb"},
+  {"tense1": "examiner", "tense2": "فَحَصَ/يَفْحَصُ/فَحْصٌ/اِفْحَصْ/يُفْحَصُ/فُحِصَ", "type": "verb"},
+  {"tense1": "Charger de", "tense2": "كََلَّفَ/يُكَلِّفُ/تَكْلِيفٌ/اُكَلِّفْ/يُكَلَّفُ/كُلِّفَ", "type": "verb"},
+  {"tense1": "Estimer", "tense2": "قَدَّرَ/يُقَدِّرُ/تَقْدِيرٌ/اُقَدِّرْ/يُقَدَّرُ/قُدِّرَ", "type": "verb"},
+  {"tense1": "Coloniser", "tense2": "اسْتَعْمَرَ/يَسْتَعْمِرُ/اسْتِعْمَارٌ/اِسْتَعْمِرْ/يُسْتَعْمَرُ/اسْتُعْمِرَ", "type": "verb"},
+  {"tense1": "Faire face", "tense2": "صادَفَ/يُصَادِفُ/مُصَادَفَةٌ/اُصَادِفْ/يُصَادِفُ/صُودِفَ", "type": "verb"},
+  {"tense1": "Guérir", "tense2": "شَفَى/يَشْفَى/شِفَاءٌ/اِشْفَ/يُشْفَى/شُفِيَ", "type": "verb"},
+  {"tense1": "bâtir", "tense2": "شَيْدَ/يُشَيِّدُ/تَشْيِيدٌ/اُشَيِّدْ/يُشَيَّدُ/شُيِّدَ", "type": "verb"},
+  {"tense1": "Permettre", "tense2": "أَتَاحَ/يُتِيحُ/إِتِيَاحٌ/اُتِيحْ/يُتَاحُ/أُتِيحَ", "type": "verb"}
 ];
 
 
