--- a/index.html
+++ b/index.html
@@ -1693,7 +1693,7 @@
   {"tense1": "Se blesser", "tense2": "جَرَحَ/يُجْرِحُ/جَرْحٌ/اُجْرَحْ/يُجْرَحُ/جُرِحَ", "type": "verb"},
   {"tense1": "Jeter", "tense2": "قَذَفَ/يَقْذِفُ/قَذْفٌ/اَقْذِفْ/يُقْذَفُ/قُذِفَ", "type": "verb"},
   {"tense1": "Accueillir", "tense2": "اسْتَضَافَ/يَسْتَضِيفُ/اسْتِضَافَةٌ/اِسْتَضِيفْ/يُسْتَضَافُ/اسْتُضِيفَ", "type": "verb"},
-  {"tense1": "décirer", "tense2": "مَزَّقَ/يُمَزِّقُ/تَمَزُّقٌ/اُمَزِّقْ/يُمَزَّقُ/مُزَّقَ", "type": "verb"},
+  {"tense1": "déchirer", "tense2": "مَزَّقَ/يُمَزِّقُ/تَمَزُّقٌ/اُمَزِّقْ/يُمَزَّقُ/مُزَّقَ", "type": "verb"},
   {"tense1": "examiner", "tense2": "فَحَصَ/يَفْحَصُ/فَحْصٌ/اِفْحَصْ/يُفْحَصُ/فُحِصَ", "type": "verb"},
   {"tense1": "Charger de", "tense2": "كََلَّفَ/يُكَلِّفُ/تَكْلِيفٌ/اُكَلِّفْ/يُكَلَّفُ/كُلِّفَ", "type": "verb"},
   {"tense1": "Estimer", "tense2": "قَدَّرَ/يُقَدِّرُ/تَقْدِيرٌ/اُقَدِّرْ/يُقَدَّرُ/قُدِّرَ", "type": "verb"},
