add arabic words

--- a/index.html
+++ b/index.html
@@ -1701,7 +1701,42 @@
   {"tense1": "Faire face", "tense2": "صادَفَ/يُصَادِفُ/مُصَادَفَةٌ/اُصَادِفْ/يُصَادِفُ/صُودِفَ", "type": "verb"},
   {"tense1": "Guérir", "tense2": "شَفَى/يَشْفَى/شِفَاءٌ/اِشْفَ/يُشْفَى/شُفِيَ", "type": "verb"},
   {"tense1": "bâtir", "tense2": "شَيْدَ/يُشَيِّدُ/تَشْيِيدٌ/اُشَيِّدْ/يُشَيَّدُ/شُيِّدَ", "type": "verb"},
-  {"tense1": "Permettre", "tense2": "أَتَاحَ/يُتِيحُ/إِتِيَاحٌ/اُتِيحْ/يُتَاحُ/أُتِيحَ", "type": "verb"}
+  {"tense1": "Permettre", "tense2": "أَتَاحَ/يُتِيحُ/إِتِيَاحٌ/اُتِيحْ/يُتَاحُ/أُتِيحَ", "type": "verb"},
+  {"tense1": "Selon", "tense2": "حسب", "type": "word"},
+  {"tense1": "s’arrêter", "tense2": "تَوَقَّفَ/يَتَوَقَّفُ/تَوَقُّف/تَوَقَّفْ/يُتَوَقَّفُ/تُوُقِّفَ", "type": "verb"},
+  {"tense1": "concerner", "tense2": "تَعَلَّقَ/يَتَعَلَّقُ/تَعَلُّق/تَعَلَّقْ/يُتَعَلَّقُ/تُعُلِّقَ", "type": "verb"},
+  {"tense1": "frotter", "tense2": "فَرَكَ/يَفْرُكُ/فَرْك/اِفْرُكْ/يُفْرَكُ/فُرِكَ", "type": "verb"},
+  {"tense1": "fil", "tense2": "خَيْط/خُيُوط/خَيْطَان/خُيُوطًا/خَيْطَيْنِ", "type": "word"},
+  {"tense1": "Commun/courant", "tense2": "شَائِعَة/شَائِعَات/شَائِعَتَانِ/شَائِعَاتٍ/شَائِعَتَيْنِ", "type": "word"},
+  {"tense1": "se précipiter", "tense2": "تَسَرَّعَ/يَتَسَرَّعُ/تَسَرُّع/تَسَرَّعْ/يُتَسَرَّعُ/تُسُرِّعَ", "type": "verb"},
+  {"tense1": "instinct", "tense2": "حَدْس/حُدُوس/حَدْسَانِ/حُدُوسًا/حَدْسَيْنِ", "type": "word"},
+  {"tense1": "Le plus remarquable", "tense2": "أَبْرَز", "type": "word"},
+  {"tense1": "suspect", "tense2": "مَرِيب/مَرِيبُونَ/مَرِيبَانِ/مَرِيبِينَ/مَرِيبَيْنِ", "type": "word"},
+  {"tense1": "désastre", "tense2": "مُصِيبَة/مُصِيبَات/مُصِيبَتَانِ/مُصِيبَاتٍ/مُصِيبَتَيْنِ", "type": "word"},
+  {"tense1": "instruction", "tense2": "إِرْشَاد/إِرْشَادَات/إِرْشَادَانِ/إِرْشَادَاتٍ/إِرْشَادَيْنِ", "type": "word"},
+  {"tense1": "vantard", "tense2": "مُتَفَاخِر/مُتَفَاخِرُونَ/مُتَفَاخِرَانِ/مُتَفَاخِرِينَ/مُتَفَاخِرَيْنِ", "type": "word"},
+  {"tense1": "chargé", "tense2": "مُزْدَحِم/مُزْدَحِمُونَ/مُزْدَحِمَانِ/مُزْدَحِمِينَ/مُزْدَحِمَيْنِ", "type": "word"},
+  {"tense1": "La veille", "tense2": "بَارِحَة", "type": "word"},
+  {"tense1": "avoir lieu", "tense2": "أُقِيمَ/تُقَام/إِقَامَة/أَقِمْ/يُقَامُ/أُقِيمَ", "type": "verb"},
+  {"tense1": "Épingle", "tense2": "إِبْرَة/إِبَر/إِبْرَتَانِ/إِبَرًا/إِبْرَتَيْنِ", "type": "word"},
+  {"tense1": "paille", "tense2": "قَشّ/قُشُوش/قَشَّانِ/قُشُوشًا/قَشَّيْنِ", "type": "word"},
+  {"tense1": "inscription", "tense2": "نَقْش/نُقُوش/نَقْشَانِ/نُقُوشًا/نَقْشَيْنِ", "type": "word"},
+  {"tense1": "descendant", "tense2": "حَفِيد/أَحْفَاد/حَفِيدَانِ/أَحْفَادًا/حَفِيدَيْنِ", "type": "word"},
+  {"tense1": "récolte", "tense2": "مَحْصُول/مَحْصُولَات/مَحْصُولَانِ/مَحْصُولَاتٍ/مَحْصُولَيْنِ", "type": "word"},
+  {"tense1": "lutte", "tense2": "صِرَاع/صِرَاعَات/صِرَاعَانِ/صِرَاعَاتٍ/صِرَاعَيْنِ", "type": "word"},
+  {"tense1": "restaurer", "tense2": "رَمَّمَ/يُرَمِّمُ/تَرْمِيم/رَمِّمْ/يُرَمَّمُ/رُمِّمَ", "type": "verb"},
+  {"tense1": "débris", "tense2": "حُطَام", "type": "word"},
+  {"tense1": "suppression", "tense2": "حَذْف", "type": "word"},
+  {"tense1": "éliminer", "tense2": "أَقْضَى/يَقْضِي/قَضَاء/اِقْضِ/يُقْضَى/أُقْضِيَ", "type": "verb"},
+  {"tense1": "équivaloir", "tense2": "عَادَلَ/يُعَادِلُ/مُعَادَلَة/عَادِلْ/يُعَادَلُ/عُودِلَ", "type": "verb"},
+  {"tense1": "parmi", "tense2": "ضِمْنَ", "type": "word"},
+  {"tense1": "éternuer", "tense2": "عَطَسَ/يَعْطِسُ/عَطْس/اِعْطِسْ/يُعْطَسُ/عُطِسَ", "type": "verb"},
+  {"tense1": "répéter", "tense2": "تَرَدَّدَ/يَتَرَدَّدُ/تَرَدُّد/تَرَدَّدْ/يُتَرَدَّدُ/تُرُدِّدَ", "type": "verb"},
+  {"tense1": "cheval", "tense2": "حِصَان/حُصُن/حِصَانَانِ/حُصُنًا/حِصَانَيْنِ", "type": "word"},
+  {"tense1": "impressionner", "tense2": "أَبْهَرَ/يُبْهِرُ/إِبْهَار/أَبْهِرْ/يُبْهَرُ/أُبْهِرَ", "type": "verb"},
+  {"tense1": "piller", "tense2": "نَهَبَ/يَنْهَبُ/نَهْب/اِنْهَبْ/يُنْهَبُ/نُهِبَ", "type": "verb"},
+  {"tense1": "sauf si", "tense2": "إِلَّا إِذَا", "type": "sentence"},
+  {"tense1": "Obsédé", "tense2": "مَهْوُوسًا", "type": "word"}
 ];
 
 
