--- a/index.html
+++ b/index.html
@@ -1726,17 +1726,16 @@
   {"tense1": "lutte", "tense2": "صِرَاع/صِرَاعَات/صِرَاعَانِ/صِرَاعَاتٍ/صِرَاعَيْنِ", "type": "word"},
   {"tense1": "restaurer", "tense2": "رَمَّمَ/يُرَمِّمُ/تَرْمِيم/رَمِّمْ/يُرَمَّمُ/رُمِّمَ", "type": "verb"},
   {"tense1": "débris", "tense2": "حُطَام", "type": "word"},
-  {"tense1": "suppression", "tense2": "حَذْف", "type": "word"},
+  {"tense1": "supprimer", "tense2": "حَذَفَ/يَحْذِفُ/حَذْف/اِحْذِفْ/يُحْذَفُ/حُذِفَ", "type": "verb"},
   {"tense1": "éliminer", "tense2": "أَقْضَى/يَقْضِي/قَضَاء/اِقْضِ/يُقْضَى/أُقْضِيَ", "type": "verb"},
   {"tense1": "équivaloir", "tense2": "عَادَلَ/يُعَادِلُ/مُعَادَلَة/عَادِلْ/يُعَادَلُ/عُودِلَ", "type": "verb"},
   {"tense1": "parmi", "tense2": "ضِمْنَ", "type": "word"},
   {"tense1": "éternuer", "tense2": "عَطَسَ/يَعْطِسُ/عَطْس/اِعْطِسْ/يُعْطَسُ/عُطِسَ", "type": "verb"},
-  {"tense1": "répéter", "tense2": "تَرَدَّدَ/يَتَرَدَّدُ/تَرَدُّد/تَرَدَّدْ/يُتَرَدَّدُ/تُرُدِّدَ", "type": "verb"},
-  {"tense1": "cheval", "tense2": "حِصَان/حُصُن/حِصَانَانِ/حُصُنًا/حِصَانَيْنِ", "type": "word"},
+  {"tense1": "cheval", "tense2": "حِصَان/حُصُن خُيول/حِصَانَانِ/حُصُنًا/حِصَانَيْنِ", "type": "word"},
   {"tense1": "impressionner", "tense2": "أَبْهَرَ/يُبْهِرُ/إِبْهَار/أَبْهِرْ/يُبْهَرُ/أُبْهِرَ", "type": "verb"},
   {"tense1": "piller", "tense2": "نَهَبَ/يَنْهَبُ/نَهْب/اِنْهَبْ/يُنْهَبُ/نُهِبَ", "type": "verb"},
   {"tense1": "sauf si", "tense2": "إِلَّا إِذَا", "type": "sentence"},
-  {"tense1": "Obsédé", "tense2": "مَهْوُوسًا", "type": "word"}
+  {"tense1": "Obsédé", "tense2": "مَهْوُوس/مَهْوُوسُونَ/مَهْوُوسَانِ/مَهْوُوسِينَ/مَهْوُوسَيْنِ", "type": "word"}
 ];
 
 
